fix: adjust color variables to improve contrast

--- a/assets/css/partials/sidebar.scss
+++ b/assets/css/partials/sidebar.scss
@@ -124,7 +124,7 @@
   justify-content: center;
   padding: 25px 0;
   color: var(--red-0);
-  opacity: 0.7;
+  opacity: 0.8;
   transition: opacity 0.5s;
 
   &:hover {
